# CU_ROS

./: README.md
ros2_text_encoder/: CMakeLists.txt  package.xml
ros2_text_encoder/srv/: GetTurtlePose.srv  TextEncode.srv
text_encoder_nodes/: package.xml  setup.cfg  setup.py
text_encoder_nodes/text_encoder_nodes/: text_encode_server.py  turtle_pose_service.py
